--- a/torwrapper.service
+++ b/torwrapper.service
@@ -9,8 +9,7 @@ Type=simple
 Restart=always
 RestartSec=1
 User=root
-ExecStart=/usr/bin/torwrapper startservice
-ExecStop=/usr/bin/torwrapper stopservice
+ExecStart=/usr/bin/torwrapper service
 
 [Install]
 WantedBy=multi-user.target
